app/assets/stylesheets/frontend.css.scss
/* ... */
.pagination .gap{
  margin: 0 8px;
}
.pagination .last a, .pagination .first a, .pagination .next a, .pagination .prev a, .pagination .first a{
  padding: 0 8px;
}


/* Sidebar */

.sidebar{
  width: 230px;
  padding: 42px 0 0 0;
}
.sidebar .im_feeling_lucky{
  background: #e4796b;
  height: 40px;
  width: 230px;
  display: inline-block;
  font: 18px/40px "input_mono_compressedmedium", sans-serif;
  text-decoration: none;
  color: #fff;
  text-align: center;
  padding: 0;
}
.sidebar h3{
  color: #312938;
  font: 24px/30px "input_mono_compressedmedium", sans-serif;
  padding: 0 0 8px 0;
  border-bottom: 3px solid #dbdbdb;
  margin: 40px 0 0 0;
}
.sidebar .offenses{
  margin: 24px 0 0 0;
  padding: 0 0 10px 0;
  border-bottom: 1px solid #ededed;
}
.sidebar .offenses li{
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: flex-start;
  -moz-justify-content: flex-start;
  -webkit-justify-content: flex-start;
  margin: 0 0 14px 0;
}
.offenses .severity_count{
  border-radius: 16px;
  width: 32px;
  height: 32px;
  text-align: center;
  color: #fff;
  font: 12px/32px "input_mono_compressedmedium", sans-serif;
  margin: 0 10px 0 0;
}
.offenses .severity_type{
  font: 18px/32px "input_mono_compressedlight", sans-serif;
  text-transform: capitalize;
}

/* Dissapointed cops */

.sidebar .disappointed_cops{
  margin: 24px 0 0 0;
  padding: 0 0 10px 0;
  border-bottom: 1px solid #ededed;
}
.sidebar .disappointed_cops li{
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: flex-start;
  -moz-justify-content: flex-start;
  -webkit-justify-content: flex-start;
  margin: 0 0 14px 0;
}
.disappointed_cops .severity_count{
  border-radius: 16px;
  width: 32px;
  height: 32px;
  text-align: center;
  color: #312938;
  font: 12px/30px "input_mono_compressedmedium", sans-serif;
  margin: 0 10px 0 0;
  border: 2px solid #dbdbdb;
  box-sizing: border-box;
}
.disappointed_cops .severity_type{
  font: 12px/32px "input_mono_compressedmedium", sans-serif;
  text-transform: capitalize;
  color: #536360;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
.secondary .footer{
  margin: 80px 0 0 0;
}

/* Updates & fixes */

.project .severities li{
  cursor: default;
}

/* Tooltips */

.hint, [data-hint] {
  position: relative;
  display: inline-block;
  /**
   * tooltip arrow
   */
  /**
   * tooltip body
   */
 }
.hint:before, .hint:after, [data-hint]:before, [data-hint]:after {
  position: absolute;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  visibility: hidden;
  opacity: 0;
  z-index: 1000000;
  pointer-events: none;
  -webkit-transition: 0.3s ease;
  -moz-transition: 0.3s ease;
  transition: 0.3s ease;
  -webkit-transition-delay: 0ms;
  -moz-transition-delay: 0ms;
  transition-delay: 0ms;
}
.hint:hover:before, .hint:hover:after, .hint:focus:before, .hint:focus:after,
[data-hint]:hover:before, [data-hint]:hover:after, [data-hint]:focus:before, [data-hint]:focus:after {
  visibility: visible;
  opacity: 1; }
.hint:hover:before, .hint:hover:after, [data-hint]:hover:before, [data-hint]:hover:after {
  -webkit-transition-delay: 100ms;
  -moz-transition-delay: 100ms;
  transition-delay: 100ms;
}
.hint:before, [data-hint]:before {
  content: '';
  position: absolute;
  background: transparent;
  border: 6px solid transparent;
  z-index: 1000001;
}
.hint:after, [data-hint]:after {
  content: attr(data-hint);
  background: #383838;
  color: white;
  padding: 8px 10px;
  font-size: 12px;
  line-height: 12px;
  white-space: nowrap;
}
.hint--top:before {
  border-top-color: #383838;
}

/**
 * top tooltip
 */
.hint--top:before {
  margin-bottom: -12px;
}
.hint--top:after {
  margin-left: -18px;
}
.hint--top:before, .hint--top:after {
  bottom: 100%;
  left: 30%;
}
.hint--top:hover:after, .hint--top:hover:before, .hint--top:focus:after, .hint--top:focus:before {
  -webkit-transform: translateY(-8px);
  -moz-transform: translateY(-8px);
  transform: translateY(-8px);
}

.trending .project_title, .recommended .project_title{
  display: block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

/* Footer */

.footer .wrapper {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -moz-justify-content: space-between;
  -webkit-justify-content: space-between;
  padding-top: 40px;
  padding-bottom: 40px;
}

.credits {
  width: 470px;
}

.credits p {
  color: #8F8598;
  font: 14px/20px "input_mono_compressedlight", sans-serif;
  padding-bottom: 20px;
}

.credits strong {
  color: #fff;
}

.credits img {
  padding-top: 20px;
}

.credits p a {
  color: #a0d1b8;
}

.credits p a:hover {
  text-decoration: none;
}

.quote {
  width: 470px;
}

.quote_text {
  font: 24px/30px "input_mono_compressedlight", sans-serif;
  color:white;
  padding-bottom:20px;
}

.quote_author {
  font: 24px/30px "input_mono_compressedmedium", sans-serif;
  color:#e4796b;
}


/* Search results */

.search_results{
  width: 100%;
}


/* Friendly message */

.friendly {
  background-color:#f1f9f7;
  padding: 20px;
  margin-top:20px;
  margin-bottom:40px;
  line-height: 32px;
}

.sidebar .friendly {
  background-color:white;
  padding: 0px;
  margin-top:20px;
  margin-bottom:40px;
  line-height: 20px;
  font-size: 14px;
}

.friendly a {
  color: #3a988c;
}

/* github form */

.js-github-form {
  padding: 40px 0;
}

.js-github-form p {
  font: 24px "input_mono_compressedlight", sans-serif;
}

.form_intro {
  padding-top:20px;
}
/* ... */

